--- a/gioithieu.html
+++ b/gioithieu.html
@@ -7,7 +7,7 @@
     <h2> học kỳ II</h2>
     <table border="1">
       <tr>
-        <th> Tiết</th> <th> Thứ hai</th> <th> Thứ ba</th> <th> Thứ tư</th> <th>Thứ năm</th><th>Thứ sáu</th> <tr>Thứ bảy</tr>
+        <th> Tiết</th> <th> Thứ hai</th> <th> Thứ ba</th> <th> Thứ tư</th> <th>Thứ năm</th><th>Thứ sáu</th> <th>Thứ bảy</th>
       </tr>
       <tr>
         <td>1</td> <td>Chào cờ</td> <td>Sử</td> <td>Toán</td> <td>Lý</td> <td>Toán</td> <td>Sinh</td>
